--- a/web/src/style.scss
+++ b/web/src/style.scss
@@ -154,7 +154,7 @@ html {
 
     #nav_main {
         height: 80px;
-        background: url('./assets/data2.home.nav.bg.png') no-repeat;
+        background: url('./assets/data2.home.nav.bg.png') repeat;
         .nav_content {
             width: 1100px;
             height: 100%;
@@ -186,6 +186,7 @@ html {
                         display: block;
                     }
                     .pop{
+                        width: 100%;
                         display: none;
                         position: absolute;
                         top: 84px;
@@ -193,6 +194,8 @@ html {
                         box-sizing: border-box;
         
                         a{
+                            width: 100%;
+                            text-align: center;
                             background-color:  map-get($colors,"grey");
                             box-sizing: border-box;
                             padding: 20px 30px;
