--- a/web/src/style.scss
+++ b/web/src/style.scss
@@ -143,6 +143,7 @@ html {
     font-size: 14px;
     body {
         font: 12px/1.5 Arial, 'Droid Sans', 'Hiragino Sans GB', 'Microsoft YaHei';
+        min-width: 1200px;
     }
 }
 .clear::after{
@@ -150,16 +151,25 @@ html {
     clear: both;
     display: block;
 }
-#dota2_nav {
+#app{
+    width: 100%;   
 
+}
+#dota2_nav {
+    width: 100%;  
+    
+    margin: auto;
     #nav_main {
         height: 80px;
         background: url('./assets/data2.home.nav.bg.png') repeat;
         .nav_content {
-            width: 1100px;
+            width: 100%;
+      
             height: 100%;
-            margin: auto;
+        
             ul{
+                width: 1100px;
+                margin: auto;
                 height: 100%;
                 li{
                     position: relative;
@@ -168,6 +178,7 @@ html {
                     }
                     >a{
                         display: block;
+                        box-sizing: border-box;
                         padding: 30px;
                         &:hover{
                             background-color: #000;
@@ -194,14 +205,19 @@ html {
                         top: 84px;
                         z-index: 1;
                         box-sizing: border-box;
-                        background-image:linear-gradient(to bottom, black, 70%,rgba(255, 255, 255, 0));
-        
+                        background-image:linear-gradient(to bottom, black, 40%,rgba(255, 255, 255, 0));
+                        &::after{
+                            content: '';
+                            display: block;
+                            height:50px;
+                            width: 100%;
+                        }
                         a{
                             width: 100%;
                             text-align: center;
                         
                             box-sizing: border-box;
-                            padding: 20px 20px;
+                            padding: 13px 20px;
                             display: block;
                             &:hover{
                                 color: map-get($colors, 'lightblue');
@@ -216,9 +232,9 @@ html {
     #nav_footer {
         position: relative;
         font-size:0px;
-        img {
-            width: calc(50%);
-        }
+        height: 200px;
+        background: url('./assets/nav_footer.jpg') no-repeat 100%/cover ;
+     
 
         .mask {
             width: 100%;
